--- a/src/blocks/container/container.css
+++ b/src/blocks/container/container.css
@@ -1,7 +1,8 @@
 .container {
   max-width: 880px;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 
